# msys2-gtest

./: README.md
src/: CMakeLists.txt  battery_manager.h  main.cc
